# game_of_life

./: .gitignore  Application.cpp  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  README.md  gol.cpp  gol.h  main.cpp
boards/: blinker_board.txt  blinker_plus  dumpy_board.shit  five_board.txt  targus.board
src/: Application.cpp  Application.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Utility.cpp  Utility.h  main.cpp
